--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,49 +1,54 @@
-
 body {
+    background: linear-gradient(to bottom, #0a0a0a 50%, #6a097e 50%);
     font-family: Arial, sans-serif;
-    background-color: #f8f9fa;
-  }
-  
-  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container {
     max-width: 400px;
-    margin: auto;
+    background-color: #ffffff;
     padding: 20px;
-    border: 1px solid #301515;
     border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  label {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+h2 {
+    color: #6a097e;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
     font-weight: bold;
-  }
-  
-  .btn-primary {
+}
+
+.btn-primary {
     width: 100%;
-  }
-  
-  .card {
-    margin-top: 20px;
-  }
-  
-  .card-body {
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .card-title {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .card-text {
-    margin-bottom: 0;
-  }
+    background-color: #6a097e;
+    border-color: #6a097e;
+    color: #ffffff;
+}
+
+.alert {
+    margin-bottom: 20px;
+}
+
+/* Estilo para o link de cadastro */
+.container p {
+    text-align: center; /* Centraliza o texto */
+    margin-top: 20px; /* Espaçamento superior */
+}
+
+.container p a {
+    color: #6a097e; /* Cor roxa para o link */
+    text-decoration: none; /* Remove o sublinhado padrão */
+}
+
+.container p a:hover {
+    text-decoration: underline; /* Adiciona sublinhado ao passar o mouse */
+}
